<resources>
	<string name="app_name">BitWallet application</string>
	<string name="author">Denis</string>


	<!-- Login and Register Strings -->
	<string name="Register">Register</string>
	<string name="Login">Login</string>
	<string name="signOut">sign out</string>
	<string name="RegisterUnder">
		<u>Register</u>
	</string>
	<string name="LoginUnder">
		<u>Login</u>
	</string>
	<string name="register">
		<u>register</u>
	</string>
	<string name="login">
		<u>login</u>
	</string>


	<string name="mailUpper">MAIL:</string>
	<string name="passUpper">PASS:</string>
	<string name="haveAcc">Already have an account?</string>
	<string name="noAcc">No account yet?</string>


	<string name="WalletBtn">Wallet</string>

	<!-- Wallet Strings -->
	<string name="businessWallet">Business wallet</string>
	<string name="bitcoin">BTC</string>

	<string name="receiveBitcoin">Receive bitcoins</string>
	<string name="sendBitcoin">Send bitcoins</string>
	<string name="transactionsList">Transactions list</string>
	<string name="info">Wallet setting</string>


	<!--  Receive Strings -->
	<string name="receiveTitle">Receive</string>
	<string name="copy">COPY</string>

	<!--  Success -->
	<string name="success">Success</string>
	<string name="ok">OK</string>

	<!--  Settings -->
	<string name="settingsTitle">Settings</string>
	<string name="description">Wallet title. Mazimum 20 symbols</string>

	<!--  Send -->
	<string name="sendTitle">Send</string>
	<string name="send">Send</string>
	<string name="to">TO:</string>
	<string name="amount">AMOUNT</string>
	<string name="available">Available</string>
	<string name="memo">MEMO:</string>

	<!--  Send -->
	<string name="transactionTitle">Transactions</string>

</resources>
