<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".Send" android:background="@color/mainBackground">

	<android.support.constraint.ConstraintLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp" android:id="@+id/navbar"
			app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp">

		<LinearLayout
				android:orientation="horizontal"
				android:layout_height="0dp"
				app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="8dp"
				android:id="@+id/home" android:layout_weight="0.4"
				app:layout_constraintBottom_toBottomOf="parent" android:layout_width="wrap_content">
			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" app:srcCompat="?attr/homeAsUpIndicator"
					android:id="@+id/homePhoto" android:layout_weight="0.2"/>
			<Button
					android:text="@string/WalletBtn"
					android:layout_width="match_parent"
					android:layout_height="match_parent" tools:layout_editor_absoluteY="84dp"
					tools:layout_editor_absoluteX="16dp" android:id="@+id/homeText"
					android:background="@color/mainBackground"
					style="@style/CommonUse" android:layout_weight="0.8" android:gravity="start|center_vertical"/>
		</LinearLayout>
		<TextView
				android:text="@string/sendTitle"
				android:layout_height="wrap_content"
				android:id="@+id/title" style="@style/CommonUse"
				android:textSize="17sp"
				app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
				app:layout_constraintStart_toStartOf="@+id/home"
				app:layout_constraintTop_toTopOf="parent" android:layout_weight="0.6"
				app:layout_constraintBottom_toBottomOf="parent"
				android:layout_width="wrap_content" android:layout_marginEnd="8dp"/>
	</android.support.constraint.ConstraintLayout>
	<LinearLayout
			android:orientation="vertical"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="16dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp" android:layout_marginRight="16dp"
			android:layout_marginTop="116dp" app:layout_constraintTop_toBottomOf="@+id/navbar"
			app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
			android:id="@+id/Fields">
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:layout_margin="16dp" android:id="@+id/to">
			<TextView
					android:text="@string/to"
					android:layout_width="wrap_content"
					android:layout_height="match_parent" android:id="@+id/toTxt" android:layout_weight="0.1"
					style="@style/SilentHill" android:textSize="16sp" android:gravity="start|center_vertical"/>
			<TextView
					android:text="ddf422g...f232424"
					android:layout_width="wrap_content"
					android:layout_height="match_parent" android:id="@+id/toUser" android:layout_weight="0.9"
					android:textSize="16sp" style="@style/CommonUse" android:gravity="start|center_vertical"
					android:paddingLeft="4dp" android:paddingRight="4dp"/>
		</LinearLayout>
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:layout_marginTop="50dp" android:layout_marginBottom="16dp"
				android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:id="@+id/amount">
			<TextView
					android:text="@string/amount"
					android:layout_height="match_parent" android:id="@+id/amountTxt" android:layout_weight="0.3"
					style="@style/SilentHill" android:textSize="16sp" android:gravity="start|center_vertical"
					android:layout_width="wrap_content"/>
			<EditText
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:inputType="number"
					android:ems="10"
					android:id="@+id/amountInput" android:layout_weight="0.7" android:text="0.00"
					style="@style/SilentHill" android:textSize="16sp"
					android:gravity="start|center_vertical" android:paddingLeft="4dp" android:paddingRight="4dp"/>
		</LinearLayout>
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:layout_marginBottom="16dp"
				android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:id="@+id/available">
			<TextView
					android:text="@string/available"
					android:layout_width="wrap_content"
					android:layout_height="match_parent" android:id="@+id/availableTxt" android:layout_weight="0.1"
					style="@style/SilentHill" android:textSize="14sp" android:gravity="start|center_vertical"
			/>
			<TextView
					android:text="5.53141"
					android:layout_width="wrap_content"
					android:layout_height="match_parent" android:id="@+id/availableNumber" android:layout_weight="0.9"
					style="@style/SilentHill" android:textSize="14sp" android:gravity="start|center_vertical"
			/>
		</LinearLayout>
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="match_parent" android:layout_margin="16dp" android:id="@+id/memo">
			<TextView
					android:text="@string/memo"
					android:layout_width="0dp"
					android:layout_height="match_parent" android:id="@+id/memoTxt" android:layout_weight="1"
					style="@style/SilentHill" android:textSize="16sp" android:gravity="start|center_vertical"/>
		</LinearLayout>
		<Button
				android:text="@string/send"
				android:layout_width="match_parent"
				android:layout_height="match_parent" android:id="@+id/send"
				android:background="@color/mainBackground" style="@style/CommonUse" android:textSize="20sp"
				android:gravity="center_horizontal|center_vertical" android:layout_marginLeft="16dp"
				android:layout_marginRight="16dp"/>
	</LinearLayout>
</android.support.constraint.ConstraintLayout>