<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".Settings" android:background="@color/mainBackground">

	<android.support.constraint.ConstraintLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp" android:id="@+id/navbar"
			app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp">

		<ImageView
				android:layout_width="wrap_content"
				android:layout_height="0dp" app:srcCompat="?attr/homeAsUpIndicator"
				android:id="@+id/home" android:layout_weight="0.2" android:layout_marginStart="8dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent" android:layout_margin="0dp"/>
		<TextView
				android:text="@string/settingsTitle"
				android:layout_height="wrap_content"
				android:id="@+id/title" style="@style/CommonUse"
				android:textSize="17sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent" android:layout_weight="0.8"
				app:layout_constraintBottom_toBottomOf="parent"
				android:layout_width="wrap_content" android:layout_marginEnd="244dp" android:layout_marginRight="244dp"
				app:layout_constraintVertical_bias="0.0"/>
	</android.support.constraint.ConstraintLayout>
	<LinearLayout
			android:orientation="vertical"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
			android:layout_marginRight="10dp" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
			android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/navbar"
			app:layout_constraintVertical_bias="0.069" android:id="@+id/menu">
		<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:layout_margin="8dp">
			<LinearLayout
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="37dp" android:layout_margin="2dp">
				<TextView
						android:text="@string/businessWallet"
						android:layout_width="match_parent"
						android:layout_height="match_parent" android:layout_weight="0.9" style="@style/CommonUse"
						android:textSize="16sp" android:gravity="center_vertical" android:paddingLeft="8dp"
						android:paddingRight="8dp"/>
				<Button
						android:text="X"
						android:layout_width="74dp"
						android:layout_height="match_parent" android:id="@+id/delete" android:layout_weight="0.1"
						android:background="@color/mainBackground" android:textColor="@android:color/white"/>
			</LinearLayout>
			<TextView
					android:text="@string/description"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_weight="1"
					android:textSize="14sp" style="@style/SilentHill" android:layout_margin="2dp"
					android:paddingLeft="8dp" android:paddingRight="8dp"/>
		</LinearLayout>
	</LinearLayout>
</android.support.constraint.ConstraintLayout>