<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".Wallet" android:background="@color/mainBackground">

	<Button
			android:text="@string/signOut"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/signOut"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			android:background="@color/authHint"
			android:textColor="@color/colorPrimaryDark"
			android:layout_marginRight="8dp"/>


	<android.support.constraint.ConstraintLayout
			android:layout_width="345dp"
			android:layout_height="187dp" app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
			android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
			android:layout_marginRight="16dp" android:layout_marginTop="108dp" android:id="@+id/Status">

		<TextView
				android:text="@string/businessWallet"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/title"
				style="@style/CommonUse"
				android:layout_marginTop="8dp"
				app:layout_constraintTop_toTopOf="parent"
				android:textSize="14sp" android:layout_marginBottom="8dp"
				app:layout_constraintBottom_toTopOf="@+id/Amount" android:layout_marginEnd="8dp"
				app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
				android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
				android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.497"
				app:layout_constraintVertical_bias="1.0"/>
		<TextView
				android:text="5.153"
				android:layout_width="wrap_content"
				android:layout_height="75dp"
				android:id="@+id/Amount" style="@style/CommonUse"
				android:textSize="56sp" app:layout_constraintTop_toTopOf="parent"
				android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
				app:layout_constraintStart_toStartOf="parent"/>
		<TextView
				android:text="@string/bitcoin"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/Currency" style="@style/SilentHill" app:layout_constraintEnd_toStartOf="@+id/Amount"
				android:layout_marginEnd="8dp"
				app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
				android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
				app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
				app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
				app:layout_constraintVertical_bias="0.394" android:textSize="16sp"/>
		<TextView
				android:text="634"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/textView4" android:layout_marginTop="8dp"
				app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
				app:layout_constraintStart_toEndOf="@+id/Amount" android:layout_marginLeft="8dp"
				android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
				app:layout_constraintBottom_toBottomOf="parent" style="@style/SilentHill"
				app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.606"
				android:textSize="16sp"/>
		<TextView
				android:text="$19,055.79"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/textView5" android:layout_marginTop="8dp"
				app:layout_constraintTop_toBottomOf="@+id/Amount" android:layout_marginBottom="8dp"
				app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
				app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
				android:layout_marginStart="8dp" android:textColor="#cfcc5b" style="@style/font"
				app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.0"/>
	</android.support.constraint.ConstraintLayout>
	<android.support.constraint.ConstraintLayout
			android:layout_width="174dp"
			android:layout_height="62dp" android:layout_marginTop="30dp"
			app:layout_constraintTop_toBottomOf="@+id/Status" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="16dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp" android:layout_marginRight="16dp" android:id="@+id/Exchange">

		<TextView
				android:text="1 BTC = $3,964.23"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
				android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
				app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp" android:textSize="20sp" android:id="@+id/market"
				style="@style/CommonUse"/>
		<TextView
				android:text="^2.45%"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/delta" android:layout_marginTop="8dp"
				app:layout_constraintTop_toBottomOf="@+id/market" app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
				app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
				android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
				app:layout_constraintBottom_toBottomOf="parent" style="@style/FontBase" android:textSize="14sp"
				android:textColor="#198216"/>
	</android.support.constraint.ConstraintLayout>
	<android.support.constraint.ConstraintLayout
			android:layout_width="0dp"
			android:layout_height="275dp" app:layout_constraintTop_toBottomOf="@+id/Exchange"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="16dp"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
			android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
			app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="40dp"
			app:layout_constraintHorizontal_bias="0.2" app:layout_constraintVertical_bias="0.205"
			android:id="@+id/Controll" android:padding="0dp">

		<android.support.constraint.ConstraintLayout
				android:layout_width="170dp"
				android:layout_height="120dp"
				app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintHorizontal_weight="0.5" app:layout_constraintVertical_weight="0.5"
				android:id="@+id/Receive" android:padding="8dp"
				android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginLeft="16dp">

			<ImageView
					android:layout_width="98dp"
					android:layout_height="66dp" tools:src="@tools:sample/avatars"
					android:id="@+id/imageView2"
					app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
					android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					app:layout_constraintHorizontal_bias="0.0"/>
			<TextView
					android:text="@string/receiveBitcoin"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
					android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
					app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/imageView2" style="@style/CommonUse"
					android:textSize="14sp" app:layout_constraintHorizontal_bias="0.084"
					app:layout_constraintVertical_bias="0.0"/>
		</android.support.constraint.ConstraintLayout>
		<android.support.constraint.ConstraintLayout
				android:layout_width="170dp"
				android:layout_height="120dp"
				app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp"
				app:layout_constraintHorizontal_weight="0.5" app:layout_constraintVertical_weight="0.5"
				app:layout_constraintStart_toEndOf="@+id/Receive"
				android:layout_marginStart="8dp" android:id="@+id/Send" android:padding="8dp"
				app:layout_constraintHorizontal_bias="0.652"
				android:layout_marginTop="16dp">

			<ImageView
					android:layout_width="98dp"
					android:layout_height="66dp" tools:src="@tools:sample/avatars"
					android:id="@+id/imageView3"
					app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
					android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					app:layout_constraintHorizontal_bias="0.0"/>
			<TextView
					android:text="@string/sendBitcoin"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
					android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
					app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/imageView3" style="@style/CommonUse"
					android:textSize="14sp"
					app:layout_constraintVertical_bias="0.0" android:id="@+id/textView13"/>
		</android.support.constraint.ConstraintLayout>
		<android.support.constraint.ConstraintLayout
				android:layout_height="120dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/Receive" android:id="@+id/Transactions"
				app:layout_constraintHorizontal_weight="0.5" app:layout_constraintVertical_weight="0.5"
				android:layout_width="170dp" android:padding="8dp" app:layout_constraintVertical_bias="0.21"
				android:layout_marginLeft="16dp" android:layout_marginStart="16dp">

			<ImageView
					android:layout_width="98dp"
					android:layout_height="66dp" tools:src="@tools:sample/avatars"
					android:id="@+id/imageView4"
					app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
					android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					app:layout_constraintHorizontal_bias="0.0"/>
			<TextView
					android:text="@string/transactionsList"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
					android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
					app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/imageView4" style="@style/CommonUse"
					android:textSize="14sp" app:layout_constraintHorizontal_bias="0.084"
					app:layout_constraintVertical_bias="0.0" android:id="@+id/textView14"/>
		</android.support.constraint.ConstraintLayout>
		<android.support.constraint.ConstraintLayout
				android:layout_width="170dp"
				android:layout_height="120dp"
				app:layout_constraintTop_toBottomOf="@+id/Send"
				app:layout_constraintStart_toEndOf="@+id/Transactions"
				android:layout_marginStart="8dp"
				app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp"
				app:layout_constraintHorizontal_weight="0.5" app:layout_constraintVertical_weight="0.5"
				android:padding="8dp" android:id="@+id/Info" app:layout_constraintHorizontal_bias="0.652"
				app:layout_constraintVertical_bias="0.157">

			<ImageView
					android:layout_width="98dp"
					android:layout_height="66dp" tools:src="@tools:sample/avatars"
					android:id="@+id/imageView5"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					app:layout_constraintHorizontal_bias="0.0"/>
			<TextView
					android:text="@string/info"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
					android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
					app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/imageView5" style="@style/CommonUse"
					android:textSize="14sp" app:layout_constraintHorizontal_bias="0.084"
					app:layout_constraintVertical_bias="0.0" android:id="@+id/textView15"/>
		</android.support.constraint.ConstraintLayout>
	</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>